gccida/c1/sorry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1509:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v2; // rbx 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1514:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v7; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1515:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v8; // rax 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1529:17: error: expected expression
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1529:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1530:17: error: expected expression
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1530:9: error: use of undeclared identifier '_OWORD'
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1531:17: error: expected expression
v5 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1531:9: error: use of undeclared identifier '_OWORD'
v5 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1532:18: error: expected expression
v13 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1532:10: error: use of undeclared identifier '_OWORD'
v13 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1536:18: error: expected expression
v17 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1536:10: error: use of undeclared identifier '_OWORD'
v17 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1541:53: error: expected expression
diagnostic_buffer->state.format_args = ( va_list_0 *)va; 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1541:42: error: use of undeclared identifier 'va_list_0'
diagnostic_buffer->state.format_args = ( va_list_0 *)va; 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1546:12: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v17; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1546:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v17; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1550:12: error: expected expression
*( _OWORD *)v8->state.diagnostic_count = v16; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/diagnostic.c:1550:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v8->state.diagnostic_count = v16; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sorry/src/obj/diagnostic.o] Error 1
